--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 ബ്രഹ്മകമലം ശ്രീലകമാക്കിയ നാദ ബ്രഹ്മത്തി
 നു ദേവാങ്കണങ്ങള്‍ കൈയൊഴിഞ്ഞ താരകം 
 പോലെ ഇന്നും മലയാള സിനിമയില്‍ തന്‍റെ
-തായ സ്ഥാനം നിലനിര്‍ത്തുന്ന കൈതപ്രം ദാ
-മോദരന്‍ നമ്പൂതിരിയോടൊപ്പം അല്‍പ്പ നേരം....
+തായ സ്ഥാനം നിലനിര്‍ത്തുന്ന പത്മശ്രീ.<br><strong> കൈത്തപ്രം ദാമോദരൻ നമ്പൂതിരി</strong> <br>അല്‍പ്പ നേരം....
             </div>
         <audio controls id='main-audio'>
             <source src="final interview.mp3" type="audio/mpeg">
