--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <footer id='main-footer'>
         <div id='footer-text'>
-        From design and layout team 
+        From choonduviral design and layout team 
         </div>
     </footer>
 
